Fixed the double scrolling on the frontend at last!

--- a/container/tc_frontend/application/html/index.css
+++ b/container/tc_frontend/application/html/index.css
@@ -1,32 +1,29 @@
-.body {
-	width: 100%;
-	height: 100%;
-	margin: 0;
+body, html {
 	padding: 0;
-	background-color: #101010;
-}
-
-.iframe_navigation {
-	display: table-row;
-	border-collapse: collapse;
-	width: 100vw;
-	height: 48px;
+	margin: 0;
 	border: 0;
-	margin: 0;
-	padding: 0;
+	height: 100%;
 	overflow: hidden;
-	background-color: gray;
 }
 
-.iframe_application {
-	display: table-row;
-	border-collapse: collapse;
+.tc-navigation iframe,
+.tc-navigation object, 
+.tc-navigation embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 44px;
+	display: flex;
+}
+
+.tc-application iframe,
+.tc-application object,
+.tc-application embed {
+	position: relative;
+	top: 0;
+	left: 0;
 	width: 100vw;
 	height: 100vw;
-	max-width: 100%;
-	border: 0;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	box-sizing: border-box;
+	display: flex;
 }
